--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0-0
+  sqflite:
+  path:
+  flutter_hooks: ^0.7.0
 
 dev_dependencies:
   flutter_test:
